# picotron-rustcuda

./: .gitignore  Cargo.toml  README.md
examples/: basic_example.rs
src/: config.rs  lib.rs  model.rs  training.rs  utils.rs
src/cuda/: device.rs  kernels.rs  memory.rs  mod.rs  operations.rs
src/parallelism/: context_parallel.rs  data_parallel.rs  mod.rs  pipeline_parallel.rs  tensor_parallel.rs
